add animation to the home page image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,3 +53,13 @@
     animation-duration: 5s;
     animation-fill-mode: forwards;
 }
+
+@keyframes section1-zoom {
+    from{
+        transform: scale(1);
+    }
+    to{
+        transform: scale(1.1);
+    }
+    
+}
