fixing link to the second image of the home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,3 +63,9 @@
     }
     
 }
+
+#mainfooter {
+    height: 220px;
+    background: url('../images/jdr9.PNG') no-repeat center;
+    color: transparent;
+}
