--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,15 +105,13 @@
 
 .signupform {
     margin-top: 50px;
-    text-align: center; 
+    text-align: center;
 }
 
 .signupinputs input {
     display: block;
-    width: 350px;
     height: 40px;
     margin: 20px;
-    border:none;
     font-size: 20px;
     border-bottom: 1px solid;
     background: white;
@@ -122,10 +120,9 @@
 }
 
 .signupinputs button {
-    width: 350px;
     height: 40px;
+    width: 100px;
     font-size: 20px;
-    border: none;
     background-color: rgb(68, 177, 32);
     color: white;
     margin-top: 20px;
@@ -146,5 +143,28 @@
     text-align: center;
     color: rgb(186, 176, 176);
     font-style: italic;
-    
+   
+}
+
+#signupsection {
+    margin-top: 150px;
+    color: #fff;
+    background-color:rgba(60, 60, 60, 0.6);
+    border-radius: 25px;
+    width: 15%;
+    margin: auto;
+    width: 60%;
+    border: 3px solid #73AD21;
+    padding: 10px;
+
+}
+
+#signuph1 {
+    top: 20px;
+    font-size: 250%;
+    background-color:rgba(60, 60, 60, 0.6);
+    color: white;
+    border-radius: 25px;
+    padding: 10px 10px 10px 10px;
+    width: inherit;
 }
