Adding style to the paragraph

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -159,5 +161,12 @@
 }
 
 #paragraph{
-  width: 60%; 
+  width: 55%;
+  margin: auto; 
+  font-family: Lato, sans-serif;
+  font-weight: 300;
+  color: #3a3a3a;
+  font-size: 130%;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
