--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,8 +165,11 @@
   margin: auto; 
   font-family: Lato, sans-serif;
   font-weight: 300;
-  color: #3a3a3a;
-  font-size: 130%;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  color:rgb(19, 88, 19);
+  font-size: 170%;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  border-radius: 25px 0 25px 0;
+  border: #138d23 1px solid;
+  padding: 20px 20px 20px 20px;
 }
