--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,7 @@
     border-bottom: 1px solid;
     background: white;
     border-radius: 25px;
+    text-align: center;
 }
 
 .signupinputs button {
