--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@
     color: white;
 }
 
-#signupbody, #signup {
+#signupbody, #signup, #thanksbody {
     height: 100%;
     background: url('../images/jdr8.jpg');  
     background-repeat: no-repeat;
@@ -168,8 +168,7 @@
   font-weight: 300;
   color:rgb(19, 88, 19);
   font-size: 170%;
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: 50px;
   border-radius: 25px 0 25px 0;
   border: #138d23 1px solid;
   padding: 60px 60px 60px 60px;
