--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,13 +211,21 @@ text-align: center;
 }
 
 #thankssection {
-    color: black;
     background: url('../images/tick.png') no-repeat center; 
-    opacity:0.7;
+    height: 480px;
+    margin-top: 40px;
+}
+
+#thanksh1 {
+    margin-top: 150px;
+    color: #fff;
+    background-color:rgba(60, 60, 60, 0.6);
     border-radius: 25px;
     margin: auto;
-    width: 40%;
+    width: 35%;
     border: 3px solid #73AD21;
+    padding: 10px;
+    height: 700px;
     text-align: center;
-    height: 490px;
+    font-size: 150%;
 }
