Add style to the thank you page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,20 +212,21 @@ text-align: center;
 
 #thankssection {
     background: url('../images/tick.png') no-repeat center; 
-    height: 700px;
-    margin-top: 40px;
+    height: 500px;
+    background-size: 600px 500px;
+    margin-top: 50px;
 }
 
 #thanksh1 {
     margin-top: 150px;
     color: black;
-    background-color:whitesmoke;
+    background-color: whitesmoke;
     border-radius: 25px;
     margin: auto;
     width: 50%;
     border: 3px solid #73AD21;
     padding: 10px;
-    height: 900px;
+    height: 700px;
     text-align: center;
     font-size: 150%;
 }
