--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,6 +332,7 @@ iframe {
     #thankssection {
         background-size: 150px 100px;
         margin-top: 0px;
+        height: 350px;
     }
 
     #paragraph {
