add dropdown for nav bar when using small size screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,6 +236,10 @@ iframe {
     height: 800px;
 }
 
+nav select {
+    display: none;
+  }
+
 @media only screen and (max-width: 1500px) {
     #mainsection {
         background-size: 1300px 600px;
@@ -343,4 +347,14 @@ iframe {
     #thanksh1, #thanksp {
         font-size: 100%;
     }
+
+    nav ul     { display: none; }
+    nav select { 
+        display: inline-block;
+        text-align: center;
+     }
+     nav {
+        margin-top: 30px;
+        text-align: center;
+     }
 }
