--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@
     border: none;
 }
 
+.navbar {
+    display: none;
+}
+
 #mainheader {
     height: 200px;
     background-color: green;
@@ -236,10 +240,6 @@ iframe {
     height: 800px;
 }
 
-nav select {
-    display: none;
-  }
-
 @media only screen and (max-width: 1500px) {
     #mainsection {
         background-size: 1300px 600px;
@@ -348,13 +348,72 @@ nav select {
         font-size: 100%;
     }
 
-    nav ul     { display: none; }
-    nav select { 
-        display: inline-block;
-        text-align: center;
-     }
-     nav {
-        margin-top: 30px;
-        text-align: center;
-     }
+    nav ul{
+        display:none;
+    }
+
+    
+.navbar {
+    display: block;
+    overflow: hidden;
+    background-color: green;
+    font-family: Arial;
+  }
+  
+  .navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .dropdown {
+    overflow: hidden;
+    text-align: center;
+    margin-top: 10px;
+  }
+  
+  .dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  
+  .navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow:green;
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    float: none;
+    color: green;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
 }
