Add more responsivness to the signup and thanks page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -417,4 +417,17 @@ iframe {
     display: block;
   }
 
+  #signupsection {
+    width: 85%;
+  }
+
+    #thanksh1 {
+    width: 85%;
+    height: 35%;
+  }
+
+  #thanksbody {
+    height: 100%;
+  }
+
 }
