Making the signup page more responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,7 +330,8 @@ iframe {
     }
 
     .signupinputs input {
-    font-size: 30%;
+    font-size: 50%;
+    width: 80%;
     }
 
     #thankssection {
