--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,7 +308,7 @@ iframe {
         margin-top: 0px;
     }
 
-    #paragraph {
+    #paragraph, #paragraphhome {
         font-size: 100%;
     }
 }
@@ -353,7 +353,7 @@ iframe {
         height: 350px;
     }
 
-    #paragraph {
+    #paragraph, #paragraphhome {
         font-size: 85%;
         padding: 10px;
         width: 85%;
