Make the home page more responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,7 +273,7 @@ iframe {
     }
 
     #mainfooter{
-        background-size: 100% 200px;
+        background-size: 800px 200px;
     }
 
 }
@@ -305,7 +305,7 @@ iframe {
     }
 
     #mainfooter{
-        background-size: 100% 200px;
+        background-size: 600px 200px;
     }
 
     #video iframe {
