--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,6 +254,13 @@ iframe {
     height: 800px;
 }
 
+.brands {
+    font-family: Oswald, sans-serif;
+    font-size: 150%;
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
 @media only screen and (max-width: 1500px) {
     #mainsection {
         background-size: 1300px 600px;
