--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,10 +255,11 @@ iframe {
 }
 
 .brands {
-    font-family: Oswald, sans-serif;
-    font-size: 150%;
-    margin-left: 20px;
     margin-top: 20px;
+    margin-left: 20px;
+    border: 15px groove #0a8d40;
+    margin-right: 20px;
+    background-color: #0a8d40;
 }
 
 @media only screen and (max-width: 1500px) {
