--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,11 +255,12 @@ iframe {
 }
 
 .brands {
-    margin-top: 20px;
-    margin-left: 20px;
-    border: 15px groove #0a8d40;
-    margin-right: 20px;
-    background-color: #0a8d40;
+ 
+}
+
+hr {
+  border: 10px solid green;
+  border-radius: 5px;
 }
 
 @media only screen and (max-width: 1500px) {
