Add pictures and style to ryvita and jordans brand

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,7 +200,7 @@
 margin-top: 50px;
 margin-left: 20px;
 margin-right: 20px;
-column-count: 2;
+column-count: 3;
 }
 
 #video {
@@ -255,12 +255,20 @@ iframe {
 }
 
 .brands {
- 
+ margin-left: 20px;
+ margin-right: 20px;
 }
+
+.brands img {
+    width: 100%;
+    display: inline-block;
+} 
 
 hr {
   border: 10px solid green;
   border-radius: 5px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 @media only screen and (max-width: 1500px) {
