--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,6 +256,10 @@ iframe {
 .brands {
  margin-left: 20px;
  margin-right: 20px;
+ border: 15px groove #0a8d40;
+ margin-right: 20px;
+ background-color: #0a8d40;
+ border-radius: 25px 25px 25px 25px;
 }
 
 .brands img {
@@ -264,7 +268,7 @@ iframe {
 } 
 
 hr {
-  border: 10px solid green;
+  border: 5px solid green;
   border-radius: 5px;
   margin-left: 20px;
   margin-right: 20px;
